JumpScript/tests/baselines/reference/enumWithParenthesizedInitializer1.errors.txt
tests/cases/compiler/enumWithParenthesizedInitializer1.jump(3,1): error TS1005: ')' expected.


==== tests/cases/compiler/enumWithParenthesizedInitializer1.jump (1 errors) ====
    enum E {
     e = -(3
    }
    ~
!!! error TS1005: ')' expected.